# detect-secrets

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  TODO.md  biome.json  deny.toml  knip.config.json  knip.json  package.json  pyproject.toml
.claude/skills/cleanup/: SKILL.md
.claude/skills/code-quality/: SKILL.md
.claude/skills/prd/: SKILL.md
.claude/skills/ralph/: SKILL.md
.claude/skills/update-backend/: SKILL.md
.cursor/rules/: agent.mdc  common.mdc  logging.mdc  makefile-commands.md  package-management.md  tests.mdc
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  secret_scanning.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: agents_validate.yaml  auto-delete-branch.yml  build_verification.yaml  codeql.yml  cursor_fix_ci_failures.yml  docs-lint.yaml  jules-sync-translations.yml  knip.yaml  link_check.yaml  linter_biome.yaml  release.yml  rust_checks.yaml
.ralphy/: config.yaml
benchmark/: __main__.py  datagen.py  results.py  results_python.json  results_rust.json  runner.py  timing.py
benchmark/benchmarks/: bench_baseline_io.py  bench_entropy.py  bench_regex.py  bench_scan_file.py  bench_scan_repo.py
benchmark/compat_rs/detect_secrets/: __init__.py  __version__.py  settings.py
benchmark/compat_rs/detect_secrets/core/: __init__.py  baseline.py  scan.py  secrets_collection.py
benchmark/compat_rs/detect_secrets/plugins/: __init__.py  aws.py  basic_auth.py  github_token.py  high_entropy_strings.py  jwt.py  keyword.py  private_key.py  slack.py  stripe.py
crates/cli/: Cargo.toml  README.md
crates/cli/examples/: smoke_test.yaml
crates/cli/src/: main.rs  serve.rs
crates/engine/: Cargo.toml  README.md
crates/engine/src/: auth_detectors.rs  baseline.rs  cloud_detectors.rs  commands.rs  context.rs  doctor.rs  entropy.rs  high_entropy_strings.rs  keyword_detector.rs  lib.rs  platform.rs  plugin.rs  potential_secret.rs  probes.rs  saas_detectors.rs  scan.rs  scenario.rs  secrets_collection.rs  settings.rs  traits.rs  types.rs
crates/engine/src/filters/: allowlist.rs  common.rs  heuristic.rs  mod.rs  regex_filter.rs  registry.rs  wordlist.rs
crates/onboard/src/steps/: env.rs  media.rs
crates/python/: Cargo.toml
crates/python/src/: auth_detectors.rs  baseline.rs  cloud_detectors.rs  custom_plugins.rs  entropy.rs  filters.rs  high_entropy_strings.rs  keyword_detector.rs  lib.rs  plugin.rs  potential_secret.rs  saas_detectors.rs  scan.rs  secrets_collection.rs  settings.rs
docs/: PRD.md  TEST_COVERAGE_ANALYSIS.md  eslint.config.mjs  middleware.ts  next.config.mjs  ops.md  package.json  translation-guide.md
docs/app/: global.css
docs/app/[lang]/: layout.tsx
docs/app/[lang]/(home)/: layout.tsx  page.tsx
docs/app/[lang]/docs/: layout.tsx
docs/app/[lang]/docs/[[...slug]]/: page.tsx
docs/app/[lang]/llms-full.txt/: route.ts
docs/app/[lang]/llms.mdx/docs/[[...slug]]/: route.ts
docs/app/[lang]/og/docs/[...slug]/: route.tsx
docs/app/api/search/: route.ts
docs/content/docs/: api.es.mdx  api.ja.mdx  api.mdx  api.zh.mdx  index.es.mdx  index.ja.mdx  index.mdx  index.zh.mdx  meta.ja.json  meta.json  test.es.mdx  test.ja.mdx  test.zh.mdx
docs/lib/: cn.ts  i18n.ts  layout.shared.tsx  source.ts
docs/privacy/: README.md
docs/runbooks/: README.md
docs/scripts/: lint.ts
python/detect_secrets_rs/: __init__.py
python/detect_secrets_rs/cli/: audit.py  hook.py  main.py
scripts/: ralph.sh
scripts/ralph/: prd.json  progress.txt  prompt.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  global_config.yaml  tauri.conf.json
src-tauri/src/: global_config.rs  lib.rs  logging.rs
src/components/: Chat.tsx  SettingsPanel.tsx
src/hooks/: useConfig.ts
tests/: conftest.py  test_baseline.py  test_filters.py  test_integration.py  test_plugins.py
