[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "detect-secrets-rs"
version = "0.1.0"
description = "Rust-backed drop-in replacement for Yelp/detect-secrets with PyO3 bindings"
requires-python = ">=3.9"
license = "MIT"

[project.scripts]
detect-secrets = "detect_secrets_rs.cli.main:main"
detect-secrets-hook = "detect_secrets_rs.cli.hook:main"

[tool.maturin]
manifest-path = "crates/python/Cargo.toml"
features = ["pyo3/extension-module"]
python-source = "python"
