[package]
name = "appctl"
version = "0.1.0"
edition = "2021"
description = "CLI test harness for the Tauri template app"
license = "MIT"

[[bin]]
name = "appctl"
path = "src/main.rs"

[dependencies]
engine = { path = "../engine" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
