[package]
name = "engine"
version = "0.1.0"
edition = "2021"
description = "Headless engine for the Tauri template app – shared between GUI and CLI"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net", "io-util"] }
thiserror = "2"
async-trait = "0.1"
